# MetaProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project.code-workspace  project.code-workspace.in
cmake/Patches/: 01-inih-cmake.patch  02-inih-has_key.patch  03-mongocxx.patch  06-threadpool11-cmake_install.patch
dep/: CMakeLists.txt
src/: CMakeLists.txt
